# Decision-Tree-to-Neural-Network

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: direct_path_comparison.md  evaluation_protocol.md  evaluation_results.md  paper_exact_consistency.md  performance_feasibility_results.md  suggestion_evaluation_results.md  zero_padded_fairness_results.md
dt_to_nn/: __init__.py  converter.py  demo.py  direct_path_converter.py  direct_path_evaluation.py  evaluation.py  experimental_variants.py  network.py  paper_evaluation.py  paper_exact_converter.py  paper_exact_evaluation.py  performance_baselines.py  suggestion_evaluation.py  torch_trainable.py  trainable.py  tree.py  visualization.py
examples/: __init__.py  compare_direct_path.py  compare_suggestions.py  evaluate_paper_exact.py  paper_style_evaluation.py  run_all_performance.py  run_demo.py  run_performance_experiment.py  visualize_demo.py
results/all_models_test/: metadata.json
results/all_models_test/raw/: model_size_summary.csv  per_epoch_metrics.csv
results/all_models_test/tables/: table_alpha_sensitivity.csv  table_fidelity.csv  table_model_size.csv  table_validation_selected_alpha.csv
results/performance_feasibility_full/: metadata.json
results/performance_feasibility_full/raw/: model_size_summary.csv  per_run_summary.csv
results/performance_feasibility_full/tables/: table_validation_selected_alpha.csv
results/performance_zero_padded_fairness/: metadata.json
tests/: test_equivalence.py  test_performance_baselines.py
(+3 files in other folders)
